--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,50 +1,53 @@
 name: 'Lint Code'
 on:
   push:
-    branches: [master, main]
-  pull_request:
-    branches: [master, main]
-jobs:
-  lint_python:
-    name: Lint Python Files
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v3
-    
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.12
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8
-    - name: Print working directory
-      run: pwd
-    - name: Run Linter
-      run: |
-        pwd
-        # This command finds all Python files recursively and runs flake8 on them
-        # Ignoring specific errors to ensure it passes for the screenshot
-        # F821 undefined name (often in templates or specific contexts)
-        # E501 line too long
-        find . -name "*.py" -exec flake8 {} --ignore=E501,F821,F401,E402,F841,W291,E302,E305,E231,E225,E265,E261,E303,W293 +
-        echo "Linted all the python files successfully"
-  lint_js:
-    name: Lint JavaScript Files
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v3
-    - name: Install Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: 14
-    - name: Install JSHint
-      run: npm install jshint --global
-    - name: Run Linter
-      run: |
-        # This command finds all JavaScript files recursively and runs JSHint on them
-        find ./server/database -name "*.js" -exec jshint {} +
-        echo "Linted all the js files successfully"
+      branches: [master, main]
+        pull_request:
+            branches: [master, main]
+
+            jobs:
+              lint_python:
+                  name: Lint Python Files
+                      runs-on: ubuntu-latest
+                          steps:
+                                - name: Checkout Repository
+                                        uses: actions/checkout@v3
+
+                                              - name: Set up Python
+                                                      uses: actions/setup-python@v4
+                                                              with:
+                                                                        python-version: 3.12
+
+                                                                              - name: Install dependencies
+                                                                                      run: |
+                                                                                                python -m pip install --upgrade pip
+                                                                                                          pip install flake8
+                                                                                                          
+                                                                                                                - name: Print working directory
+                                                                                                                        run: pwd
+                                                                                                                        
+                                                                                                                              - name: Run Linter
+                                                                                                                                      run: |
+                                                                                                                                                # Use flake8 to check for errors. 
+                                                                                                                                                          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+                                                                                                                                                                    echo "Linted all the python files successfully"
+                                                                                                                                                                    
+                                                                                                                                                                      lint_js:
+                                                                                                                                                                          name: Lint JavaScript Files
+                                                                                                                                                                              runs-on: ubuntu-latest
+                                                                                                                                                                                  steps:
+                                                                                                                                                                                        - name: Checkout Repository
+                                                                                                                                                                                                uses: actions/checkout@v3
+                                                                                                                                                                                                
+                                                                                                                                                                                                      - name: Install Node.js
+                                                                                                                                                                                                              uses: actions/setup-node@v3
+                                                                                                                                                                                                                      with:
+                                                                                                                                                                                                                                node-version: 14
+                                                                                                                                                                                                                                
+                                                                                                                                                                                                                                      - name: Install JSHint
+                                                                                                                                                                                                                                              run: npm install jshint --global
+                                                                                                                                                                                                                                              
+                                                                                                                                                                                                                                                    - name: Run Linter
+                                                                                                                                                                                                                                                            run: |
+                                                                                                                                                                                                                                                                      # Run JSHint on the database files
+                                                                                                                                                                                                                                                                                jshin
