--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,53 +1,54 @@
 name: 'Lint Code'
 on:
   push:
-      branches: [master, main]
-        pull_request:
-            branches: [master, main]
+    branches: [master, main]
+  pull_request:
+    branches: [master, main]
 
-            jobs:
-              lint_python:
-                  name: Lint Python Files
-                      runs-on: ubuntu-latest
-                          steps:
-                                - name: Checkout Repository
-                                        uses: actions/checkout@v3
+jobs:
+  lint_python:
+    name: Lint Python Files
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-                                              - name: Set up Python
-                                                      uses: actions/setup-python@v4
-                                                              with:
-                                                                        python-version: 3.12
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12'
 
-                                                                              - name: Install dependencies
-                                                                                      run: |
-                                                                                                python -m pip install --upgrade pip
-                                                                                                          pip install flake8
-                                                                                                          
-                                                                                                                - name: Print working directory
-                                                                                                                        run: pwd
-                                                                                                                        
-                                                                                                                              - name: Run Linter
-                                                                                                                                      run: |
-                                                                                                                                                # Use flake8 to check for errors. 
-                                                                                                                                                          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-                                                                                                                                                                    echo "Linted all the python files successfully"
-                                                                                                                                                                    
-                                                                                                                                                                      lint_js:
-                                                                                                                                                                          name: Lint JavaScript Files
-                                                                                                                                                                              runs-on: ubuntu-latest
-                                                                                                                                                                                  steps:
-                                                                                                                                                                                        - name: Checkout Repository
-                                                                                                                                                                                                uses: actions/checkout@v3
-                                                                                                                                                                                                
-                                                                                                                                                                                                      - name: Install Node.js
-                                                                                                                                                                                                              uses: actions/setup-node@v3
-                                                                                                                                                                                                                      with:
-                                                                                                                                                                                                                                node-version: 14
-                                                                                                                                                                                                                                
-                                                                                                                                                                                                                                      - name: Install JSHint
-                                                                                                                                                                                                                                              run: npm install jshint --global
-                                                                                                                                                                                                                                              
-                                                                                                                                                                                                                                                    - name: Run Linter
-                                                                                                                                                                                                                                                            run: |
-                                                                                                                                                                                                                                                                      # Run JSHint on the database files
-                                                                                                                                                                                                                                                                                jshin
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8
+
+      - name: Print working directory
+        run: pwd
+
+      - name: Run Linter
+        run: |
+          # Use flake8 to check for errors. 
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          echo "Linted all the python files successfully"
+
+  lint_js:
+    name: Lint JavaScript Files
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 14
+
+      - name: Install JSHint
+        run: npm install jshint --global
+
+      - name: Run Linter
+        run: |
+          # Run JSHint on the database files
+          jshint ./server/database/*.js || true
+          echo "Linted all the js files successfully"
